heroku changes db part 4

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "viajaconmigo-NodeJS",
   "version": "0.0.0",
   "private": true,
+"main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "body-parser": "~1.15.1",
     "connect-flash": "^0.1.1",
