--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "viajaconmigo-NodeJS",
   "version": "0.0.0",
   "private": true,
-"main": "index.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "express-session": "^1.14.2",
     "jade": "~1.11.0",
     "mongodb": "^2.2.10",
     "morgan": "~1.7.0",
