--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jade": "^1.11.0",
     "mongodb": "^2.2.11",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "^2.3.0"
   }
 }
