--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.14.2",
     "jade": "^1.11.0",
     "mongodb": "^2.2.11",
+    "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
