--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "debug": "^2.2.0",
+    "dep-linker": "^1.0.24",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "google-maps": "^3.2.1",
+    "image-type": "^2.1.0",
     "jade": "^1.11.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.6",
@@ -21,6 +24,10 @@
     "multer": "^1.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "slider-pro": "^1.3.0"
+  },
+  "devDependencies": {
+    "express-debug": "^1.1.1"
   }
 }
