--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dep-linker": "^1.0.24",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "express-url-breadcrumb": "0.0.7",
     "font-awesome": "^4.7.0",
     "google-maps": "^3.2.1",
     "image-type": "^2.1.0",
