--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.14.2",
     "express-url-breadcrumb": "0.0.7",
     "font-awesome": "^4.7.0",
+    "geoip-lite": "^1.1.8",
     "google-maps": "^3.2.1",
     "image-type": "^2.1.0",
     "jade": "^1.11.0",
