--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "quickthumb": "0.0.12",
     "serve-favicon": "^2.3.0",
     "slider-pro": "^1.3.0"
   },
